--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,14 @@
 }
 body{
     background-image: url(./assets/Background\ pattern.png);
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
     background-position: center;
+    max-width: 1280px;
+    margin: 0 auto;
 }
+
+/* Navigation styles starts here */
+
 nav{
     display: flex;
     height: 80px;
@@ -19,7 +24,7 @@ nav{
     align-self: stretch;
     width: 100%;
     /* background-color: aqua; */
-    padding:0 80px;
+    /* padding:0 80px; */
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
@@ -66,6 +71,89 @@ nav ul{
     display: none;
 }
 
+/* Navigation styles ends here */
+
+
+/* Headers styles starts here */
+
+
+.Header {
+    margin-top: 96px;
+    padding: 0 96px;
+}
+.Header-texts{
+    padding: 0 100px;
+}
+.Header h1{
+    color: var(--Gray-900, #101828);
+    text-align: center;
+    /* Display xl/Medium */
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 72px; /* 120% */
+    letter-spacing: -1.2px;
+}
+.Header p{
+    color: var(--Gray-600, #475467);
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 150% */
+    padding: 24px 100px;
+    
+}
+.Headers-btn{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 12px;
+}
+.btn-headers{
+    display: flex;
+    padding: 16px 28px;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    margin-top: 24px;
+}
+.btn-showcase{
+    border-radius: 8px;
+    border: 1px solid var(--Gray-300, #D0D5DD);
+    background: var(--Base-White, #FFF);
+
+    /* Shadow/xs */
+    box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+}
+.btn-chat{
+    border-radius: 8px;
+    border: 1px solid var(--Primary-600, #444CE7);
+    background: var(--Primary-600, #444CE7);
+    color: #FFF;
+    /* Shadow/xs */
+    box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+}
+.Geometric-img-container{
+    margin-top:64px;
+    background-color: #101828;
+    background-image: url(./assets/Geometric\ shapes.svg);
+    margin-bottom: 96px;
+    width: 100%;
+    height: 304px;
+    /* padding: 0px 32px; */
+    /* background-position: center;
+    object-fit: contain; */
+    background-size: auto;
+}
+
+
+/* Headers styles ends here */
+
+
+
+
+
 
 
 
@@ -73,11 +161,14 @@ nav ul{
 
     body{
         background-image: url(./assets/Background\ pattern-1.png);
-        background-attachment: fixed;
+        /* background-attachment: fixed; */
         background-position: center;
     }
+      
 
-    nav{
+/* Navigation styles starts here */
+
+    body{
         padding:0 16px;
     }
     .nav-items,.nav-buttons{
@@ -89,5 +180,75 @@ nav ul{
     .menu{
         display:inline-block;
     }
+/* Navigation styles ends here */
+
+
+/* Headers styles starts here */
+
+
+.Header {
+    margin-top: 64px;
+    padding: 0;
+}
+.Header-texts{
+    padding: 0;
+}
+.Header h1{
+    color: var(--Gray-900, #101828);
+
+    /* Display md/Medium */
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 44px; /* 122.222% */
+    letter-spacing: -0.72px;
+}
+.Header p{
+    color: var(--Gray-600, #475467);
+
+    /* Text lg/Regular */
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 155.556% */
+    padding: 0;
+    margin-top: 16px;
+}
+.Headers-btn{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 12px;
+    margin-top: 32px;
+}
+.btn-headers{
+    display: flex;
+    padding: 16px 28px;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    width: 100%;
+    margin-top: 0;
+}
+
+.Geometric-img-container{
+    margin-top:64px;
+    background-image: url(./assets/Geometric\ shapes-1.svg);
+    margin-bottom: 96px;
+    width: 100%;
+    height: 304px;
+    padding: 0px 32px;
+    background-position: center;
+    object-fit: contain;
+
+}
+
+
+
+/* Headers styles ends here */
+
     
   }
