--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,42 @@ nav ul{
 /* Headers styles ends here */
 
 
+/* Blog styles starts here  */
+.blog-section{
+    display: flex;
+    padding: 96px 32px;
+    gap:64px;
+}
+.blog-content-text h2{
+    color: var(--Gray-900, #101828);
+
+    /* Display md/Semibold */
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 44px; /* 122.222% */
+    letter-spacing: -0.72px;
+}
+
+.blog-content-text p{
+    color: var(--Gray-600, #475467);
+
+    /* Text lg/Regular */
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 155.556% */
+    text-align: justify;
+    margin-top: 40px;
+}
+/* Blog styles ends here  */
+
+
+
+
+
 
 
 
@@ -245,10 +281,43 @@ nav ul{
     object-fit: contain;
 
 }
-
-
-
 /* Headers styles ends here */
+
+
+
+/* Blog styles starts here  */
+
+.blog-section{
+    display: flex;
+    padding: 64px 16px;
+}
+.blog-content-text h2{
+    color: var(--Gray-900, #101828);
+
+    /* Display sm/Semibold */
+    font-family: Inter;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 38px; /* 126.667% */
+}
+
+.blog-content-text p{
+    color: var(--Gray-600, #475467);
+
+    /* Text md/Regular */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+}
+.blog-content-img{
+    display: none;
+}
+/* Blog styles ends here  */
+
+
 
     
   }
