--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 body{
     background-image: url(./assets/Background\ pattern.png);
     /* background-attachment: fixed; */
+    
     background-position: center;
     max-width: 1280px;
     margin: 0 auto;
@@ -190,6 +191,149 @@ nav ul{
 
 
 
+/* Pricing styles starts here  */
+
+
+.pricing-section{
+    margin: 96px 0;
+}
+.pricing-card-group {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 32px;
+    align-self: stretch;
+    margin-top: 64px;
+}
+.pricing-header{
+    padding:0 32px;
+}
+.pricing-header h2{
+    color: var(--Gray-900, #101828);
+
+/* Display md/Semibold */
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 44px; /* 122.222% */
+    letter-spacing: -0.72px;
+}
+.pricing-header p{
+    color: var(--Gray-600, #475467);
+
+    /* Text xl/Regular */
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 150% */
+    margin-top: 20px;
+}
+
+.pricing-card{
+    border-radius: 16px;
+    border: 1px solid var(--Gray-200, #EAECF0);
+    background: var(--Base-White, #FFF);
+    /* Shadow/lg */
+    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+    width: 384px;
+}
+.pricing-card-header {
+    display: flex;
+    padding: 32px 32px 0px 32px;
+    flex-direction: column;
+    align-items:center;
+    /* gap: 24px; */
+    justify-items: center;
+    align-self: stretch;
+}
+.pricing-card-header h3{
+    color: var(--Primary-700, #3538CD);
+    text-align: center;
+    
+    /* Text xl/Semibold */
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 30px; /* 150% */
+}
+.pricing-card-header h1{
+    color: var(--Gray-900, #101828);
+    text-align: center;
+
+    /* Display lg/Semibold */
+    font-family: Inter;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 60px; /* 125% */
+    letter-spacing: -0.96px;
+    margin: 8px 0;
+}
+
+.pricing-card-header p{
+    color: var(--Gray-600, #475467);
+text-align: center;
+
+    /* Text md/Regular */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+}
+
+.pricing-card-items{
+    display: flex;
+    padding: 32px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    align-self: stretch;
+}
+.card-item{
+    display: flex;
+  
+    align-items: flex-start;
+    gap: 16px;
+    align-self: stretch;
+}
+.card-footer{
+    display: flex;
+    padding: 32px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    align-self: stretch;
+}
+.btn-pricing{
+    display: flex;
+    padding: 12px 20px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    align-self: stretch;
+    border-radius: 8px;
+    border: 1px solid var(--Primary-600, #444CE7);
+    background: var(--Primary-600, #444CE7);
+    width: 100%;
+    color: #FFF;
+    /* Shadow/xs */
+    box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+    color: var(--Base-White, #FFF);
+
+    /* Text md/Semibold */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 150% */
+}
+/* Pricing styles Ends here  */
+
+
 
 
 
@@ -319,5 +463,143 @@ nav ul{
 
 
 
+
+/* Pricing styles starts here  */
+
+
+.pricing-section{
+    margin: 64px 0;
+}
+.pricing-card-group {
+    display: flex;
+    flex-direction: column;   
+    gap: 16px;
+    margin-top: 48px;
+}
+.pricing-header{
+    padding:0 24px;
+}
+.pricing-header h2{
+    color: var(--Gray-900, #101828);
+
+    /* Display sm/Semibold */
+    font-family: Inter;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 38px; /* 126.667% */
+}
+.pricing-header p{
+    color: var(--Gray-600, #475467);
+    /* Text lg/Regular */
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 155.556% */
+}
+
+.pricing-card{
+    border-radius: 16px;
+    border: 1px solid var(--Gray-200, #EAECF0);
+    background: var(--Base-White, #FFF);
+    /* Shadow/lg */
+    box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+    width: 100%;
+}
+.pricing-card-header {
+    display: flex;
+    padding: 24px 24px 0px 24px;
+    flex-direction: column;
+    align-items:center;
+    /* gap: 24px; */
+    justify-items: center;
+    align-self: stretch;
+}
+.pricing-card-header h3{
+    color: var(--Primary-700, #3538CD);
+    text-align: center;
     
-  }
+    /* Text xl/Semibold */
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 30px; /* 150% */
+}
+.pricing-card-header h1{
+    color: var(--Gray-900, #101828);
+    text-align: center;
+
+    /* Display lg/Semibold */
+    font-family: Inter;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 60px; /* 125% */
+    letter-spacing: -0.96px;
+    margin: 8px 0;
+}
+
+.pricing-card-header p{
+    color: var(--Gray-600, #475467);
+text-align: center;
+
+    /* Text md/Regular */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+}
+
+.pricing-card-items{
+    display: flex;
+    padding: 32px 24px 24px 24px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    align-self: stretch;
+}
+.card-item{
+    display: flex;
+  
+    align-items: flex-start;
+    gap: 16px;
+    align-self: stretch;
+}
+.card-footer{
+    display: flex;
+    padding: 32px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    align-self: stretch;
+}
+.btn-pricing{
+    display: flex;
+    padding: 12px 20px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    align-self: stretch;
+    border-radius: 8px;
+    border: 1px solid var(--Primary-600, #444CE7);
+    background: var(--Primary-600, #444CE7);
+    width: 100%;
+    color: #FFF;
+    /* Shadow/xs */
+    box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+    color: var(--Base-White, #FFF);
+    /* Text md/Semibold */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 150% */
+}
+
+
+
+
+}
