--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,9 @@
 body{
     background-image: url(./assets/Background\ pattern.png);
     /* background-attachment: fixed; */
-    
-    background-position: center;
+    background-repeat: no-repeat;
+    background-position-x: center; 
+    /* background-position: center; */
     max-width: 1280px;
     margin: 0 auto;
 }
@@ -330,8 +331,117 @@ text-align: center;
     font-style: normal;
     font-weight: 600;
     line-height: 24px; /* 150% */
+    cursor: pointer;
 }
 /* Pricing styles Ends here  */
+
+.stats-section{
+    display: flex;
+    padding: 96px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 64px;
+    align-self: stretch;
+}
+.stats-section-head{
+    display: flex;
+    width: 1280px;
+    padding: 0px 32px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+.stats-section-head h2{
+    color: var(--Gray-900, #101828);
+
+    /* Display md/Semibold */
+    font-family: Inter;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 44px; /* 122.222% */
+    letter-spacing: -0.72px;
+}
+.stats-section-head p{
+    color: var(--Gray-600, #475467);
+
+    /* Text xl/Regular */
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; /* 150% */
+}
+.stats{
+    display: flex;
+    width: 1280px;
+    padding: 0px 32px;
+    align-items: center;
+    gap: 96px;
+}
+.stats-img img{
+    height: 560px;
+    width: 560px;
+    object-fit: cover;
+    
+    flex: 1 0 0;
+}
+.stats-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 64px;
+    flex: 1 0 0;
+}
+.stat{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    flex: 1 0 0;
+}
+.stat h1{
+    color: var(--Primary-600, #444CE7);
+    text-align: center;
+
+    /* Display xl/Semibold */
+    font-family: Inter;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 72px; /* 120% */
+    letter-spacing: -1.2px;
+}
+.stat h5{
+    color: var(--Gray-900, #101828);
+    text-align: center;
+
+    /* Text lg/Semibold */
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 28px; /* 155.556% */
+}
+.stat p{
+    color: var(--Gray-600, #475467);
+    text-align: center;
+
+    /* Text md/Regular */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+}
+.stat-row{
+    display: flex;
+    align-items: flex-start;
+    gap: 32px;
+    align-self: stretch;
+}
+
+
 
 
 
@@ -342,7 +452,9 @@ text-align: center;
     body{
         background-image: url(./assets/Background\ pattern-1.png);
         /* background-attachment: fixed; */
-        background-position: center;
+        background-repeat: no-repeat;
+        background-position-x: center; 
+        /* background-position: center; */
     }
       
 
