--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,13 @@ body{
     background-repeat: no-repeat;
     background-position-x: center; 
     /* background-position: center; */
+   
+}
+.body-container{
     max-width: 1280px;
     margin: 0 auto;
-}
 
+}
 /* Navigation styles starts here */
 
 nav{
@@ -456,6 +459,7 @@ text-align: center;
 
 
 
+/* Chats section starts here */
 
 .chat-section{
     display: flex;
@@ -473,6 +477,8 @@ text-align: center;
     align-items: flex-start;
     /* justify-items: space-between; */
     gap: 200px;
+    max-width: 1280px;
+    margin: 0 auto;
     
 }
 .chat-content-left{
@@ -525,6 +531,99 @@ text-align: center;
     gap: 8px;
     flex: 1 0 0;
 }
+/* Chats section ends here */
+
+
+
+
+
+
+/* Footer section starts here */
+
+footer{
+    display: flex;
+    padding: 64px 0px 48px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 64px;
+    align-self: stretch;
+    background: var(--Gray-950, #0C111D);
+}
+.footer-nav{
+    display: flex;
+    /* width: 1280px; */
+    padding: 0px 32px;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    align-self: stretch;
+}
+.footer-nav-items{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+    align-self: stretch;
+}
+.footer-nav-items a{
+    color: var(--Gray-200, #EAECF0);
+
+    /* Text md/Semibold */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 150% */
+    text-decoration: none;
+}
+
+.footer-feet{
+    display: flex;
+    width: 1280px;
+    padding: 0px 32px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+}
+.footer-feet-container{
+    display: flex;
+    padding-top: 32px;
+    align-items: center;
+    gap: 32px;
+    align-self: stretch;
+    justify-content: space-between;
+    border-top: 1px solid var(--Gray-600, #475467);
+}
+.footer-feet-container p{
+    color: var(--Gray-300, #D0D5DD);
+
+    /* Text md/Regular */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+}
+
+.footer-feet-items{
+    display: flex;
+    align-items: flex-start;
+    gap: 16px;
+    align-self: stretch;
+}
+.footer-feet-items a{
+    color: var(--Gray-300, #D0D5DD);
+
+    /* Text md/Regular */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    text-decoration: none;
+}
+
+/* Footer section ends here */
 
 
 
@@ -547,6 +646,7 @@ text-align: center;
 
 @media only screen and (max-width: 600px) {
 
+
     body{
         background-image: url(./assets/Background\ pattern-1.png);
         /* background-attachment: fixed; */
@@ -558,7 +658,10 @@ text-align: center;
 
 /* Navigation styles starts here */
 
-    body{
+    /* body{
+        padding:0 16px;
+    } */
+    .body-container{
         padding:0 16px;
     }
     .nav-items,.nav-buttons{
@@ -933,6 +1036,172 @@ text-align: center;
     
 }
 /* stats section ends here */
+
+
+
+/* Chats section starts here */
+
+.chat-section{
+    display: flex;
+    width: 100%;
+    padding: 64px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
+    background-color: #f9fafb;
+}
+.chat-container{
+    display: flex;
+    width: 100%;
+    padding: 0px 16px;
+    align-items: flex-start;
+    /* justify-items: space-between; */
+    gap: 48px;
+    max-width: 1280px;
+    margin: 0 auto;
+    flex-direction: column;
+    
+}
+.chat-content-left{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 12px;
+    align-self: stretch;
+}
+.chat-content-left h2{
+    color: var(--Gray-900, #101828);
+
+    /* Display sm/Semibold */
+    font-family: Inter;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 38px; /* 126.667% */
+}
+.chat-content-left p{
+    color: var(--Gray-600, #475467);
+
+    /* Text lg/Regular */
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 155.556% */
+}
+
+
+.chat-content-right{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 40px;
+    flex: 1 0 0;
+}
+.chats{
+    display: flex;
+    align-items: flex-start;
+    gap: 16px;
+    align-self: stretch;
+}
+.chats-head {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+    flex: 1 0 0;
+}
+/* Chats section ends here */
+
+
+
+/* Footer section starts here */
+
+footer{
+    display: flex;
+    padding: 48px 0px;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
+    align-self: stretch;
+    background: var(--Gray-950, #0C111D);
+}
+.footer-nav{
+    display: flex;
+    padding: 0px 16px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+    align-self: stretch;
+}
+.footer-nav-items{
+    display: flex;
+    align-items: flex-start;
+    align-self: stretch;
+    flex-direction: column;
+    gap: 16px;
+    flex: 1 0 0;
+}
+.footer-nav-items a{
+    color: var(--Gray-200, #EAECF0);
+
+    /* Text md/Semibold */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 150% */
+    text-decoration: none;
+}
+
+.footer-feet{
+    display: flex;
+    padding: 0px 16px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 32px;
+    align-self: stretch;
+    width: 100%;
+}
+.footer-feet-container{
+    display: flex;
+    padding-top: 32px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    align-self: stretch;
+    border-top: 1px solid var(--Gray-600, #475467);
+}
+.footer-feet-container p{
+    color: var(--Gray-300, #D0D5DD);
+
+    /* Text md/Regular */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+}
+
+.footer-feet-items{
+        display: flex;
+    align-items: flex-start;
+    gap: 16px;
+}
+.footer-feet-items a{
+    color: var(--Gray-300, #D0D5DD);
+
+    /* Text md/Regular */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    text-decoration: none;
+}
+
+/* Footer section ends here */
+
 
 
 }
